--- a/css.css
+++ b/css.css
@@ -14,7 +14,7 @@ body {
   background-color: sandybrown;
 }
 
-/*@font-face {
+@font-face {
   font-family: AutumnFont;
   src: url(apple_butter\Apple Butter.ttf);
-}*/
+}
