--- a/css.css
+++ b/css.css
@@ -14,6 +14,8 @@ body {
 .titlediv {
   text-align: center;
   background-color: #FFBD3B;
+  border-radius: 50px;
+  margin: 5%;
 }
 
 .titlediv img {
